--- a/src/sass/settings/_colors.scss
+++ b/src/sass/settings/_colors.scss
@@ -7,7 +7,7 @@ $grey-light:      rgba(0,0,0,0.1);
 
 // Theme styles
 
-$brand:             $red;
+$brand:             $green;
 
 $font-color:        $black;
 $heading-color:     $black;
@@ -16,7 +16,7 @@ $link-hover-color:  $brand;
 
 $border-color:      rgba(0,0,0,0.5);
 
-$main-background:   $white;
+$main-background:   $grey-dark;
 
 // Footer
 
