--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -2,7 +2,10 @@
   position: relative;
   z-index: 10;
   padding: $spacing*2 0;
-  background-color: $header-color;
+  height: 130px;
+  margin-bottom: -130px;
+  display: flex;
+  align-items: flex-end;
 
   &__inner {
     display: flex;
